# TradingCardGame

./: .gitignore  CMakeLists.txt  Code Review.docx  README.md
data/: deck.txt
include/: Card.h  CardFactory.h  EffectRegistry.h  Exceptions.h  Game.h  GameHelpers.h  Player.h  SpellCard.h  StructureCard.h  TrapCard.h  UnitCard.h
src/: Card.cpp  CardFactory.cpp  EffectRegistry.cpp  Game.cpp  Player.cpp  SpellCard.cpp  StructureCard.cpp  TrapCard.cpp  UnitCard.cpp  main.cpp
